compiler/testData/diagnostics/tests/inline/localFun.kt
fun main() {
    <!NOT_YET_SUPPORTED_IN_INLINE!>inline<!> fun a(){
    }
}